# congenial-invention

./: .gitignore  ARM64_BUILD_FIX_SUMMARY.md  ARM64_INJECTION_FIX_SUMMARY.md  BUILD_STATUS.md  CLAUDE.md  CMakeLists.txt  DEBUGGING_GUIDE.md  DEVELOPMENT_PLAN.md  KEYLOG_STRATEGY_GUIDE.md  README.md  TLS_FIX_IMPLEMENTATION_SUMMARY.md  TLS_TROUBLESHOOTING_GUIDE.md  VS_CODE_IMPROVEMENTS.md  collector_log.txt  test_pipe.py
.github/workflows/: build.yml
build_arm64/config/: aiti_config.json
build_arm64/renderer/: preload.js
build_arm64/tests/: unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
build_x64/tests/: unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
collector/: AnalysisEngine.cs  AnalysisResult.cs  Collector.csproj  LogEvent.cs  Program.cs
config/: aiti_config.json
dll/: CMakeLists.txt  dllmain.cpp  hooks.cpp  hooks.h  json.cpp  json.h  logging.h  minimal_test.cpp  openssl_types.h  pattern_scan.cpp  pattern_scan.h  pipe_client.cpp  pipe_client.h
injector/: CMakeLists.txt  injector.cpp
packaging/: CMakeLists.txt  Product.wxs
proxy/: Program.cs  Proxy.csproj
renderer/: CMakeLists.txt
tests/: CMakeLists.txt  electron_test.js  main.cpp  mini_client.cpp  spawn_test.py  test_arm64_injection.cpp  test_inject_self.cpp  test_simple.cpp  winhttp_hooks_test.cpp
tests/python/: test_capture.py
tools/: CMakeLists.txt  dll_diag.cpp  log_analyzer.cpp
